customer and cash updated
